# stt-wayland

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  README.md  USAGE.md  pyproject.toml  tox.ini
src/stt_wayland/: __init__.py  __main__.py  config.py  daemon.py  state_machine.py
src/stt_wayland/audio/: __init__.py  recorder.py
src/stt_wayland/output/: __init__.py  clipboard.py  notify.py  wtype.py
src/stt_wayland/transcription/: __init__.py  gemini.py
sway/: config.example
tests/: README.md  __init__.py  conftest.py  test_config.py  test_gemini.py  test_state_machine.py  test_wtype.py
